Fixed issue of hover not covering 100% at small size

--- a/styles/fesc-styles.scss
+++ b/styles/fesc-styles.scss
@@ -329,10 +329,18 @@ footer {
 /********* MEDIA QUERIES ***************/
 
 @media screen and (max-width: 980px) {
-  
+  .header-nav {
+    margin: 0;
+    padding: 0;
+    justify-content: center;
+    align-content: center;
+  }
   #tag-line{
     @include resp-header;
     margin-bottom: 0;
+  }
+  #top-nav {
+    width: 100%;
   }
   #top-nav ul {
     width: 100%;
